--- a/script/routines.yaml
+++ b/script/routines.yaml
@@ -8,9 +8,9 @@ morning:
     - condition: state
       entity_id: alarm_control_panel.home_alarm
       state: "armed_home"
-    - service: alarm_control_panel.alarm_disarm
+    - action: alarm_control_panel.alarm_disarm
       entity_id: all
-    - service: ecobee.resume_program
+    - action: ecobee.resume_program
       data:
         entity_id: climate.main_floor
         resume_all: true
@@ -20,39 +20,39 @@ white_noise_start:
   sequence:
     # This is to prevent the annoying google home startup sound.
     # -----------------------------------------------------------
-    - service: media_player.volume_set
+    - action: media_player.volume_set
       data:
         entity_id: "{{ media_player_id }}"
         volume_level: 0.01
-    - service: media_player.turn_off
+    - action: media_player.turn_off
       data:
         entity_id: "{{ media_player_id }}"
     - delay: 00:00:01
-    - service: media_player.turn_on
+    - action: media_player.turn_on
       data:
         entity_id: "{{ media_player_id }}"
     - delay: 00:00:01
     # -----------------------------------------------------------
-    - service: script.turn_on
+    - action: script.turn_on
       data:
         entity_id: script.white_noise_play
         variables:
           media_player_id: "{{ media_player_id }}"
     - delay: 00:00:02
-    - service: media_player.volume_set
+    - action: media_player.volume_set
       data:
         entity_id: "{{ media_player_id }}"
         volume_level: 0.18
 
 white_noise_play:
   sequence:
-    - service: media_player.play_media
+    - action: media_player.play_media
       data:
         media_content_type: audio/mp3
         entity_id: "{{ media_player_id }}"
         media_content_id: >-
           http://www.gstatic.com/voice_delight/sounds/long/pink_noise.mp3
-    - service: script.turn_on
+    - action: script.turn_on
       data:
         entity_id: script.white_noise_loop
         variables:
@@ -61,7 +61,7 @@ white_noise_play:
 white_noise_loop:
   sequence:
     - delay: 00:52:00
-    - service: script.turn_on
+    - action: script.turn_on
       data:
         entity_id: script.white_noise_play
         variables:
@@ -69,10 +69,10 @@ white_noise_loop:
 
 white_noise_stop:
   sequence:
-    - service: script.turn_off
+    - action: script.turn_off
       entity_id: script.white_noise_play
-    - service: script.turn_off
+    - action: script.turn_off
       entity_id: script.white_noise_loop
-    - service: media_player.turn_off
+    - action: media_player.turn_off
       data:
         entity_id: "{{ media_player_id }}"
