--- a/automation/alert.yaml
+++ b/automation/alert.yaml
@@ -29,11 +29,11 @@
         - >-
           {{ single_temp_target == high_temp_target == low_temp_target == 0 }}
   actions:
-    - service: ecobee.resume_program
+    - action: ecobee.resume_program
       data:
         entity_id: climate.main_floor
         resume_all: true
-    - service: notify.all_people
+    - action: notify.all_people
       data:
         message: >-
           Le thermostat de la maison a été
@@ -52,11 +52,11 @@
     platform: time
     at: "12:45:00"
   actions:
-    - service: media_player.volume_set
+    - action: media_player.volume_set
       entity_id: media_player.kitchen
       data:
         volume_level: 0.2
-    - service: tts.google_translate_say
+    - action: tts.google_translate_say
       entity_id: media_player.kitchen
       data:
         message: N'oubliez pas de ranger la nourriture sur le comptoir.
@@ -67,16 +67,16 @@
     platform: homeassistant
     event: start
   actions:
-    - service: media_player.volume_set
+    - action: media_player.volume_set
       entity_id: media_player.maison
       data:
         volume_level: 0.2
-    - service: tts.google_translate_say
+    - action: tts.google_translate_say
       entity_id: media_player.kitchen
       data:
         message: Home Assistant est démarré.
         language: "fr"
-    - service: notify.yan
+    - action: notify.yan
       data:
         message: "Home Assistant started."
 
@@ -85,7 +85,7 @@
     - platform: time
       at: "00:00:00"
   actions:
-    - service: input_boolean.turn_off
+    - action: input_boolean.turn_off
       entity_id: input_boolean.yan_had_pills
 
 - alias: yan pills notify
@@ -108,7 +108,7 @@
       before: "04:00:00"
   mode: single
   actions:
-    - service: notify.yan
+    - action: notify.yan
       data:
         message: "Yan, prends tes pillules!"
     - and:
@@ -121,24 +121,24 @@
     - repeat:
         sequence:
           - delay: "00:00:02"
-          - service: light.turn_on
+          - action: light.turn_on
             data:
               entity_id: light.table_de_chevet_de_yan
               brightness: 56
               xy_color: [0.672, 0.324]
               transition: 1
           - delay: "00:00:02"
-          - service: light.turn_off
+          - action: light.turn_off
             data:
               entity_id: light.table_de_chevet_de_yan
               transition: 1
         until: '{{ is_state("input_boolean.yan_had_pills", "on") }}'
-    - service: light.turn_on
+    - action: light.turn_on
       data:
         entity_id: light.table_de_chevet_de_yan
         brightness: 1
         color_temp_kelvin: 2732
-    - service: light.turn_off
+    - action: light.turn_off
       entity_id: light.table_de_chevet_de_yan
 
 - alias: Notify when device has low battery
@@ -156,7 +156,7 @@
     - repeat:
         count: 4
         sequence:
-          - service: notify.yan
+          - action: notify.yan
             data:
               message: >
                 La batterie {{ trigger.entity_id }} doit être changée.
