--- a/automation/cameras/backyard.yaml
+++ b/automation/cameras/backyard.yaml
@@ -11,7 +11,7 @@
     entity_id: camera.backyard
     state: idle
   actions:
-    - service: shell_command.set_rear_window_camera_time
+    - action: shell_command.set_rear_window_camera_time
 
 - alias: Notify when motion in backyard
   id: Notify_when_motion_in_backyard
@@ -28,11 +28,11 @@
             as_timestamp(states.cover.living_room_window_blind.last_changed))
            > 20 }}
   actions:
-    - service: camera.snapshot
+    - action: camera.snapshot
       data:
         entity_id: camera.backyard
         filename: /media/backyard.jpg
-    - service: notify.yan
+    - action: notify.yan
       data:
         message: "Backyard Motion detected"
         data:
