--- a/automation/cameras/garage.yaml
+++ b/automation/cameras/garage.yaml
@@ -11,7 +11,7 @@
     entity_id: camera.garage
     state: idle
   actions:
-    - service: shell_command.set_garage_camera_time
+    - action: shell_command.set_garage_camera_time
 
 - alias: Notify when motion in garage
   id: Notify_when_motion_in_garage
@@ -31,11 +31,11 @@
               entity_id: alarm_control_panel.home_alarm
               state: "disarmed"
   actions:
-    - service: camera.snapshot
+    - action: camera.snapshot
       data:
         entity_id: camera.garage
         filename: /media/garage.jpg
-    - service: notify.yan
+    - action: notify.yan
       data:
         message: "Garage - motion detected"
         data:
@@ -49,4 +49,4 @@
     - platform: state
       entity_id: input_button.garage_door
   actions:
-    - service: rest_command.garage_camera_output
+    - action: rest_command.garage_camera_output
