--- a/automation/phones.yaml
+++ b/automation/phones.yaml
@@ -5,6 +5,6 @@
     - platform: state
       entity_id: input_button.sync_photo_yan
   actions:
-    - service: joaoapps_join.android_server_send_tasker
+    - action: joaoapps_join.android_server_send_tasker
       data:
         command: "SyncPhotoYan"
