--- a/automation/zwave.yaml
+++ b/automation/zwave.yaml
@@ -26,7 +26,7 @@
   actions:
     repeat:
       sequence:
-        - service: light.turn_on
+        - action: light.turn_on
           data:
             entity_id: light.frederique_night_light
             brightness: >-
@@ -48,7 +48,7 @@
         property_key_name: "001"
         value: "KeyPressed3x"
   actions:
-    - service: light.turn_on
+    - action: light.turn_on
       data:
         entity_id: light.frederique_night_light
         brightness: 255
@@ -62,7 +62,7 @@
         property_key_name: "002"
         value: "KeyPressed3x"
   actions:
-    - service: light.turn_off
+    - action: light.turn_off
       data:
         entity_id:
           - light.frederique_night_light
@@ -83,7 +83,7 @@
         property_key_name: "002"
         value: "KeyPressed2x"
   actions:
-    - service: light.turn_on
+    - action: light.turn_on
       data:
         entity_id:
           - light.table_de_chevet_de_cath
@@ -99,7 +99,7 @@
         device_id: "c67fd05c899d2f3d80ac784e7b648614"
         value: "KeyPressed2x"
   actions:
-    - service: >
+    - action: >
         light.turn_{{ "on" if trigger.event.data.property_key_name == "001"
                       else "off"}}
       entity_id:
@@ -117,18 +117,18 @@
         property_key_name: "002"
         value: "KeyPressed2x"
   actions:
-    - service: light.turn_off
+    - action: light.turn_off
       data:
         entity_id: light.frederique_bedroom
-    - service: switch.turn_on
+    - action: switch.turn_on
       data:
         entity_id: switch.baby_monitor
-    - service: script.turn_on
+    - action: script.turn_on
       data:
         entity_id: script.white_noise_stop
         variables:
           media_player_id: media_player.bureau
-    - service: script.turn_on
+    - action: script.turn_on
       data:
         entity_id: script.white_noise_start
         variables:
@@ -151,10 +151,10 @@
   mode: single
   max_exceeded: silent
   actions:
-    - service: switch.turn_off
+    - action: switch.turn_off
       data:
         entity_id: switch.baby_monitor
-    - service: script.turn_on
+    - action: script.turn_on
       data:
         entity_id: script.white_noise_stop
         variables:
@@ -174,7 +174,7 @@
     {{ states(light_entity_id) != "unknown" and
        light_entity_id not in states.group.zwave_dimmers_default_exclude.attributes.entity_id }}
   actions:
-    - service: light.turn_on
+    - action: light.turn_on
       data:
         entity_id: "{{ light_entity_id }}"
         brightness: >-
@@ -184,7 +184,7 @@
           {% else %}
             255
           {% endif %}
-    - service: zwave_js.refresh_value
+    - action: zwave_js.refresh_value
       data:
         entity_id: "{{ light_entity_id }}"
 
@@ -197,13 +197,13 @@
         property_key_name: "001"
         value: "KeyPressed"
   actions:
-    - service: light.turn_on
+    - action: light.turn_on
       data:
         entity_id:
           - light.bathroom_ceiling_light
           - light.bathroom_mirror_light
         brightness: 255
-    - service: switch.turn_on
+    - action: switch.turn_on
       data:
         entity_id: switch.master_bathroom_fan
 
@@ -222,11 +222,11 @@
         property_key_name: "002"
         value: "KeyPressed"
   actions:
-    - service: light.turn_off
+    - action: light.turn_off
       entity_id:
         - light.bathroom_ceiling_light
         - light.bathroom_mirror_light
-    - service: script.auto_off
+    - action: script.auto_off
       data:
         auto_entity: switch.master_bathroom_fan
         duration_seconds: 1800
@@ -240,7 +240,7 @@
         property_key_name: "001"
         value: "KeyPressed2x"
   actions:
-    - service: script.auto_switch_on
+    - action: script.auto_switch_on
       data:
         auto_entity: switch.master_bathroom_fan
         duration_seconds: 1800
@@ -254,7 +254,7 @@
         property_key_name: "001"
         value: "KeyPressed3x"
   actions:
-    - service: script.auto_switch_on
+    - action: script.auto_switch_on
       data:
         auto_entity: switch.master_bathroom_fan
         duration_seconds: 3600
@@ -278,7 +278,7 @@
       {{ device_entities(trigger.event.data.device_id) | first }}
   condition: '{{ states(light_entity_id) != "unknown" }}'
   actions:
-    - service: light.turn_on
+    - action: light.turn_on
       data:
         entity_id: "{{ light_entity_id }}"
         brightness: 255
@@ -293,11 +293,11 @@
         property_key_name: "001"
         value: "KeyPressed3x"
   actions:
-    - service: light.turn_on
+    - action: light.turn_on
       data:
         entity_id: light.bathroom_ceiling_light
         brightness: 255
-    - service: switch.turn_on
+    - action: switch.turn_on
       entity_id: switch.heated_bed
 
 - alias: Heated bed turn off after 20 minutes
@@ -309,7 +309,7 @@
       for:
         minutes: 20
   actions:
-    - service: switch.turn_off
+    - action: switch.turn_off
       entity_id: switch.heated_bed
 
 - alias: bathroom ceiling tripple click down
@@ -321,13 +321,13 @@
         property_key_name: "002"
         value: "KeyPressed3x"
   actions:
-    - service: light.turn_off
+    - action: light.turn_off
       entity_id:
         - light.bathroom_ceiling_light
         - light.bathroom_mirror_light
-    - service: switch.turn_off
+    - action: switch.turn_off
       entity_id: switch.master_bathroom_fan
-    - service: light.turn_on
+    - action: light.turn_on
       data:
         entity_id:
           - light.kitchen_main_light
@@ -354,7 +354,7 @@
       {{ device_entities(trigger.event.data.device_id) | first }}
   condition: '{{ states(light_entity_id) != "unknown" }}'
   actions:
-    - service: light.turn_off
+    - action: light.turn_off
       data:
         entity_id: "{{ light_entity_id }}"
 
@@ -367,7 +367,7 @@
         property_key_name: "002"
         value: "KeyPressed2x"
   actions:
-    - service: light.turn_off
+    - action: light.turn_off
       entity_id:
         - light.kitchen_main_light
         - light.upper_stairs_light
@@ -388,12 +388,12 @@
       {{ 103 if (19 <= now().hour or now().hour < 7) and
          is_state('switch.baby_monitor', 'on') else 255 }}
   actions:
-    - service: light.turn_on
+    - action: light.turn_on
       data:
         entity_id: light.frederique_bedroom
         brightness: "{{ brightness }}"
     - condition: "{{ brightness == 103 }}"
     - delay: "00:10:00"
-    - service: light.turn_off
+    - action: light.turn_off
       data:
         entity_id: light.frederique_bedroom
