--- a/script/heating.yaml
+++ b/script/heating.yaml
@@ -8,13 +8,13 @@ increase_basement_heating:
           value_template: >
             {{ state_attr('climate.chauffage_sous_sol_thermostat', 'temperature') | float < 24 }}
         sequence:
-          - service: notify.yan
+          - action: notify.yan
             data:
               message: >-
                 Ajustement graduel de la température du sous-sol de
                 {{- " " + state_attr('climate.chauffage_sous_sol_thermostat', 'current_temperature') | string }} à
                 {{- " " + (state_attr('climate.chauffage_sous_sol_thermostat', 'temperature') + 1) | string -}}.
-          - service: climate.set_temperature
+          - action: climate.set_temperature
             data_template:
               entity_id: climate.chauffage_sous_sol_thermostat
               temperature: >
