--- a/script/reminders.yaml
+++ b/script/reminders.yaml
@@ -4,9 +4,9 @@ yan_pills:
     - condition: state
       entity_id: input_boolean.yan_had_pills
       state: "off"
-    - service: input_boolean.turn_on
+    - action: input_boolean.turn_on
       entity_id: input_boolean.yan_had_pills
-    - service: notify.yan
+    - action: notify.yan
       data:
         message: "Yan a pris ses pillules."
 
@@ -15,7 +15,7 @@ phone_notification:
   sequence:
     - condition: template
       value_template: '{{ is_state("person." + owner, "home") }}'
-    - service: >-
+    - action: >-
         input_boolean.
         {%- if type == "notification" -%}
           toggle
