--- a/switch/template.yaml
+++ b/switch/template.yaml
@@ -4,8 +4,8 @@
     update_leaf:
       value_template: "{{ is_state('script.update_leaf', 'on') }}"
       turn_on:
-        service: script.turn_on
+        action: script.turn_on
         entity_id: script.update_leaf
       turn_off:
-        service: script.turn_off
+        action: script.turn_off
         entity_id: script.update_leaf
